# aws1

./: .env.example  .gitignore  CONFIGURATION.md  INSTALLATION.md  MODELS.md  PROJECT_ARCHITECTURE.md  README.md  REQUIREMENTS.md  SETUP.md  TROUBLESHOOTING.md  config.py  deploy.sh  pyproject.toml  requirements.txt  run.py  run_workers.py
app/: __init__.py  extensions.py
app/application/dto/: photo_dto.py
app/application/services/: ai_pipeline_service.py  audit_service.py  auth_service.py  catalog_service.py  image_processing_service.py  photo_service.py  search_service.py
app/domain/entities/: enums.py
app/domain/exceptions/: domain_exceptions.py
app/domain/policies/: ownership.py
app/infrastructure/ai/: providers.py
app/infrastructure/database/: __init__.py  models.py
app/infrastructure/logging/: logging_config.py
app/infrastructure/repositories/: base.py  catalog_repository.py  photo_repository.py  queue_repository.py  user_repository.py
app/infrastructure/security/: passwords.py  rate_limiter.py  upload_validator.py
app/infrastructure/storage/: local_storage.py
app/presentation/blueprints/: albums.py  api.py  auth.py  dashboard.py  errors.py  photos.py
app/presentation/static/css/: app.css
app/presentation/static/js/: app.js
app/presentation/templates/: base.html
app/presentation/templates/albums/: index.html
app/presentation/templates/auth/: forgot_password.html  login.html  (+2 more)
app/utils/: files.py
app/workers/: ai_worker.py  base_worker.py  cleanup_worker.py  embedding_worker.py  image_worker.py  run_all_once.py  thumbnail_worker.py
(+12 files in other folders)
